Fix: Padding in buttons. Add: Scrollbar removal code

--- a/style.css
+++ b/style.css
@@ -29,7 +29,8 @@
 	text-align: center;
 	vertical-align: middle;
 
-	padding-bottom: 9px;
+	padding-bottom: 4px;
+    padding-top: 4px;
 	margin-right: 10px;
 
 }
